worked towards getting an estimate of what th uncertainties one would obtain from rough resummed calculations

--- a/pdf-studies/analytic-games/Makefile
+++ b/pdf-studies/analytic-games/Makefile
@@ -15,15 +15,18 @@ COMMONSRC = ecfs.cc hypergeometric.cc qcd-constants.cc resum-blocks-vincent.cc r
 F77SRC = 
 COMMONOBJ = ecfs.o hypergeometric.o qcd-constants.o resum-blocks-vincent.o resum-blocks.o
 
-PROGSRC = test-ecfs.cc test-lh-multiplicity.cc
-PROGOBJ = test-ecfs.o test-lh-multiplicity.o
+PROGSRC = get_cut_efficiency.cc test-ecfs.cc test-lh-multiplicity.cc
+PROGOBJ = get_cut_efficiency.o test-ecfs.o test-lh-multiplicity.o
 
 INCLUDE += 
 LIBRARIES += -lpython2.7
 
 
-all:  test-ecfs test-lh-multiplicity 
+all:  get_cut_efficiency test-ecfs test-lh-multiplicity 
 
+
+get_cut_efficiency: get_cut_efficiency.o  $(COMMONOBJ)
+	$(CXX) $(LDFLAGS) -o $@ $@.o $(COMMONOBJ) $(LIBRARIES)
 
 test-ecfs: test-ecfs.o  $(COMMONOBJ)
 	$(CXX) $(LDFLAGS) -o $@ $@.o $(COMMONOBJ) $(LIBRARIES)
@@ -39,7 +42,7 @@ clean:
 	rm -vf $(COMMONOBJ) $(PROGOBJ)
 
 realclean: clean
-	rm -vf  test-ecfs test-lh-multiplicity 
+	rm -vf  get_cut_efficiency test-ecfs test-lh-multiplicity 
 
 .cc.o:         $<
 	$(CXX) $(CXXFLAGS) $(INCLUDE) -c $< -o $@
@@ -55,10 +58,14 @@ depend:
 	makedepend  $(LCLINCLUDE) -Y --   -- $(COMMONSRC) $(PROGSRC)
 # DO NOT DELETE
 
-ecfs.o: qcd-constants.hh ecfs.hh resum-blocks-vincent.hh hypergeometric.hh
+ecfs.o: qcd-constants.hh ecfs.hh shape.hh resum-blocks-vincent.hh
+ecfs.o: hypergeometric.hh
 hypergeometric.o: hypergeometric.hh
 qcd-constants.o: qcd-constants.hh
 resum-blocks-vincent.o: qcd-constants.hh resum-blocks-vincent.hh
 resum-blocks.o: resum-blocks.hh qcd-constants.hh
-test-ecfs.o: ecfs.hh
-test-lh-multiplicity.o: lh-multiplicity.hh resum-blocks.hh qcd-constants.hh
+get_cut_efficiency.o: shape.hh lh-multiplicity.hh resum-blocks.hh
+get_cut_efficiency.o: qcd-constants.hh ecfs.hh
+test-ecfs.o: ecfs.hh shape.hh
+test-lh-multiplicity.o: lh-multiplicity.hh shape.hh resum-blocks.hh
+test-lh-multiplicity.o: qcd-constants.hh
